--- a/otl-huffman.cabal
+++ b/otl-huffman.cabal
@@ -75,7 +75,8 @@ executable otl-huffman
     build-depends:      base ^>=4.17.2.1,
                         containers,
                         binary,
-                        bytestring
+                        bytestring,
+                        cereal
                     
 
     -- Directories containing source files.
